# cpp-stratego-gg

./: .gitignore  CMakeLists.txt  IO_Handler.cpp  IO_Handler.h  README.md  main.cpp
Enums/: AttackType.h  FigureName.h  FigureNames.h  PlayerColor.h
Figures/: Figure.cpp  Figure.h  FigureStats.h
Figures/Soldiers/: Archer.cpp  Archer.h  Artificer.cpp  Artificer.h  BabyDragon.cpp  BabyDragon.h  Cavalier.cpp  Cavalier.h  Cleric.cpp  Cleric.h  King.cpp  King.h  Knight.cpp  Knight.h  Marauder.cpp  Marauder.h  Paladin.cpp  Paladin.h  Peasant.cpp  Peasant.h  Sorcerer.cpp  Sorcerer.h  Vampire.cpp  Vampire.h  Wall.cpp  Wall.h
Logic/: Cell.cpp  Cell.h  GameLogic.cpp  GameLogic.h  InfoPanel.cpp  InfoPanel.h  ShopPanel.cpp  ShopPanel.h  WinningPlayer.h
Player/: Player.cpp  Player.h
UI/: BluePlayerTexture.cpp  BluePlayerTexture.h  BoardUI.cpp  BoardUI.h  ButtonClickUI.cpp  ButtonClickUI.h  ButtonHoveredUI.cpp  ButtonHoveredUI.h  ButtonUI.cpp  ButtonUI.h  CellHoveredUI.cpp  CellHoveredUI.h  CellUI.cpp  CellUI.h  GameText.cpp  GameText.h  PanelLayerUI.cpp  PanelLayerUI.h  RedPlayerTexture.cpp  RedPlayerTexture.h  SelectedCellUI.cpp  SelectedCellUI.h  TextureCreator.cpp  TextureCreator.h
UI/PanelUI/: PanelUI.cpp  PanelUI.h
